# dudek

./: README.md  flake.nix  main.py  pyproject.toml
docker_image_deployer/: docker.py
dudek/: docker.py  domain.py  portainer.py
