[tool.poetry]
name = "docker-image-deployer"
version = "0.1.0"
description = ""
authors = ["Athul Cyriac Ajay <athul8720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.0.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
